--- a/FindMyDrink/bin/AndroidManifest.xml
+++ b/FindMyDrink/bin/AndroidManifest.xml
@@ -35,7 +35,7 @@
             </intent-filter>            
         </activity>
         <activity
-            android:name="com.find.my.drink.DashBoard"
+            android:name="com.find.my.drink.DashBoardLayout"
             android:label="DashBoard" >   
             <intent-filter>
                 <action android:name="com.find.my.drink.DASHBOARD" />
