--- a/FindMyDrink/bin/AndroidManifest.xml
+++ b/FindMyDrink/bin/AndroidManifest.xml
@@ -7,12 +7,20 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
+    
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.find.my.drink.MainActivity"
             android:label="@string/app_name"
@@ -42,6 +50,55 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>            
         </activity>
+         <activity
+            android:name="com.find.my.drink.AddDrink"
+            android:label="AddDrink" >  
+            <intent-filter>
+                <action android:name="com.find.my.drink.ADDDRINK" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>                       
+        </activity>
+         <activity
+            android:name="com.find.my.drink.Blog"
+            android:label="Blog" >
+            <intent-filter>
+                <action android:name="com.find.my.drink.BLOG" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>                         
+        </activity>
+         <activity
+            android:name="com.find.my.drink.Checkin"
+            android:label="Checkin" >
+            <intent-filter>
+                <action android:name="com.find.my.drink.CHECKIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>                         
+        </activity>
+         <activity
+            android:name="com.find.my.drink.Events"
+            android:label="Events" >
+            <intent-filter>
+                <action android:name="com.find.my.drink.EVENTS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>                         
+        </activity>
+         <activity
+            android:name="com.find.my.drink.InviteFriends"
+            android:label="InviteFriends" >
+            <intent-filter>
+                <action android:name="com.find.my.drink.INVITEFRIENDS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>                         
+        </activity>
+         <activity
+            android:name="com.find.my.drink.Search"
+            android:label="Search" >
+			<intent-filter>
+                <action android:name="com.find.my.drink.SEARCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>                        
+        </activity>
+        
     </application>
 
 </manifest>
